test/tests/stages/18_structures/invalid_types/invalid_struct_declaration/duplicate_struct_declaration.parse
-- Lexing ... OK
-- Parsing ... OK
+
+
@@ C AST @@
CProgram: 
  List[1]: 
    CFunDecl: 
      CFunctionDeclaration: 
        TIdentifier: main
        List[0]: 
        CB: 
          List[3]: 
            CD: 
              CStructDecl: 
                CStructDeclaration: 
                  TIdentifier: x
                  Bool: 0
                  List[1]: 
                    CMemberDeclaration: 
                      TIdentifier: x
                      Int: 
            CD: 
              CStructDecl: 
                CStructDeclaration: 
                  TIdentifier: x
                  Bool: 0
                  List[1]: 
                    CMemberDeclaration: 
                      TIdentifier: y
                      Int: 
            CS: 
              CReturn: 
                CConstant: 
                  CConstInt: 
                    TInt: 0
                  None: 
        FunType: 
          TULong: 67108864
          TULong: 67108864
          List[0]: 
          Int: 
        None: 
